--- a/material/overrides/home.html
+++ b/material/overrides/home.html
@@ -17,7 +17,7 @@
           <a href="{{ page.next_page.url | url }}" class="md-button md-button--primary">
             Quick start
           </a>
-          <a href="{{ 'more/getting-started' | url }}" class="md-button">
+          <a href="{{ 'more/material' | url }}" class="md-button">
             Learn More
           </a>
         </div>
