--- a/material/overrides/home.html
+++ b/material/overrides/home.html
@@ -1,9 +1,10 @@
 {#-
   This file was automatically generated - do not edit
 -#}
+
 {% extends "main.html" %}
 {% block tabs %}
-  {{ super() }}
+  {{ super() }} 
   <style>.md-header{position:initial}.md-main__inner{margin:0}.md-content{display:none}@media screen and (min-width:60em){.md-sidebar--secondary{display:none}}@media screen and (min-width:76.25em){.md-sidebar--primary{display:none}}</style>
   <section class="mdx-container">
     <div class="md-grid md-typeset">
@@ -12,10 +13,10 @@
           <img src="assets/images/cat.jpg" alt="" width="1659" height="1200" draggable="false">
         </div>
         <div class="mdx-hero__content">
-          <h1>Angular 學習筆記</h1>
+          <h1>學習筆記</h1>
           <p>{{ config.site_description }}</p>
           <a href="{{ page.next_page.url | url }}" class="md-button md-button--primary">
-            Quick start
+            Getting started
           </a>
           <a href="{{ 'more/material' | url }}" class="md-button">
             Learn More
@@ -25,5 +26,6 @@
     </div>
   </section>
 {% endblock %}
+
 {% block content %}{% endblock %}
 {% block footer %}{% endblock %}
