update more page

--- a/material/overrides/home.html
+++ b/material/overrides/home.html
@@ -10,13 +10,13 @@
     <div class="md-grid md-typeset">
       <div class="mdx-hero">
         <div class="mdx-hero__image">
-          <img src="assets/images/cat.jpg" alt="" width="1659" height="1200" draggable="false">
+          <img src="assets\images\kisspng-nyan-cat.png" alt="" draggable="false">
         </div>
         <div class="mdx-hero__content">
           <h1>學習筆記</h1>
           <p>{{ config.site_description }}</p>
           <a href="{{ page.next_page.url | url }}" class="md-button md-button--primary">
-            Getting started
+            Angular
           </a>
           <a href="{{ 'more/material' | url }}" class="md-button">
             Learn More
