--- a/material/overrides/home.html
+++ b/material/overrides/home.html
@@ -10,7 +10,7 @@
     <div class="md-grid md-typeset">
       <div class="mdx-hero">
         <div class="mdx-hero__image">
-          <img src="assets\images\kisspng-nyan-cat.png" alt="" draggable="false">
+          <img src="assets\images\nyancat.svg" alt="" draggable="false">
         </div>
         <div class="mdx-hero__content">
           <h1>學習筆記</h1>
